force-app/main/default/objects/Class_Import_Field_Mapping__mdt/Class_Import_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Class Import Field Mapping</label>
    <pluralLabel>Class Import Field Mappings</pluralLabel>
</CustomObject>