force-app/main/default/objects/Class_Import_Field_Mapping__mdt/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>