force-app/main/default/objects/Class_Import_Field_Mapping__mdt/fields/Is_Default_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Mapping</label>
    <type>Checkbox</type>
</CustomField>