force-app/main/default/objects/Class_Import_Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class_Name__c</fullName>
                <default>true</default>
                <label>Class_Name__c</label>
            </value>
            <value>
                <fullName>Duration_Minutes__c</fullName>
            </value>
            <value>
                <fullName>Pricing_Plan__c</fullName>
            </value>
            <value>
                <fullName>Pricing_Input_Type__c</fullName>
            </value>
            <value>
                <fullName>Pricing_Input_Amount__c</fullName>
            </value>
            <value>
                <fullName>Static_Payout_Rate2__c</fullName>
            </value>
            <value>
                <fullName>Custom_Pricing_Plan__c</fullName>
            </value>
            <value>
                <fullName>Custom_Dynamic_Ceiling__c</fullName>
            </value>
            <value>
                <fullName>Custom_Static_Rate__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>